@@ -1,3 +1,7 @@
+2012-03-05  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 10.2.0 Released.
+
 2012-03-01  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 10.2.0-rc4 Released.
